# AixCode

./: .gitignore  README.md  checklist.md  config.yaml  pyproject.toml  spec.md  tasks.md
aixcode/: __main__.py  agent.py  app.py  cli.py  client.py  config.py  conversation.py  headless.py  prompts.py  runtime.py
aixcode/agents/: __init__.py  fork.py  loader.py  notification.py  parser.py  task_manager.py  tool_filter.py  trace.py
aixcode/commands/: __init__.py  completion.py  parser.py  registry.py
aixcode/context/: __init__.py  manager.py  tokenizer.py
aixcode/hooks/: __init__.py  conditions.py  engine.py  events.py  executors.py  loader.py  models.py
aixcode/mcp/: __init__.py  client.py  manager.py  tool_wrapper.py
aixcode/memory/: __init__.py  auto_memory.py  instructions.py  session.py
aixcode/permissions/: __init__.py  checker.py  dangerous.py  modes.py  rules.py  sandbox.py
aixcode/skills/: __init__.py  directory.py  executor.py  loader.py  parser.py
aixcode/teams/: __init__.py  backend_detect.py  coordinator.py  mailbox.py  manager.py  models.py  (+6 more)
tests/: test_agent.py  test_app.py  test_ask_user.py  test_cli.py  test_client.py  test_commands.py  test_config.py  test_context.py  test_conversation.py  test_headless.py  test_hooks.py  test_main.py  test_mcp.py  test_mcp_app_wiring.py  test_mcp_prompt.py  test_memory.py  test_permissions.py  test_prompts.py  test_registry.py  test_runtime.py  test_skills.py  test_subagent.py  test_teams.py  test_token_status.py  test_tokenizer.py  test_tool_search.py  test_tools.py  test_workdir.py  test_worktree.py
(+58 files in other folders)
