[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "aixcode"
version = "0.1.0"
description = "终端 AI 编程助手"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "prompt_toolkit>=3.0",
]

[project.scripts]
aixcode = "aixcode.__main__:main"

[tool.setuptools.packages.find]
include = ["aixcode*"]

[tool.setuptools.package-data]
"aixcode.skills.builtins" = ["**/*.md", "**/*.json", "**/references/*.py"]
"aixcode.agents.builtins" = ["*.md"]
